--- a/org.fcitx.Fcitx5.Addon.Mozc.yaml
+++ b/org.fcitx.Fcitx5.Addon.Mozc.yaml
@@ -2,17 +2,24 @@ app-id: org.fcitx.Fcitx5.Addon.Mozc
 branch: stable
 runtime: org.fcitx.Fcitx5
 runtime-version: stable
-sdk: org.kde.Sdk//5.15-22.08
+sdk: org.kde.Sdk//6.6
 sdk-extensions:
-  - org.freedesktop.Sdk.Extension.llvm14
+  - org.freedesktop.Sdk.Extension.llvm17
+  - org.freedesktop.Sdk.Extension.bazel
 build-extension: true
 appstream-compose: false
 separate-locales: false
 build-options:
   prefix: /app/addons/Mozc
   prepend-pkg-config-path: /app/addons/Mozc/lib/pkgconfig
-  prepend-path: /usr/lib/sdk/llvm14/bin
-  prepend-ld-library-path: /usr/lib/sdk/llvm14/lib
+  prepend-path: /usr/lib/sdk/llvm17/bin:/usr/lib/sdk/bazel/bin
+  prepend-ld-library-path: /usr/lib/sdk/llvm17/lib
+  env:
+    - _bldtype=Release
+    - server_dir=/app/addons/Mozc/lib/mozc
+    - document_dir=/app/ime/mozc/licenses/mozc
+    - icons_dir=/app/share/icons/mozc
+    - LOCALE=C.UTF-8
 cleanup:
   - /bin
   - /include
@@ -23,20 +30,24 @@ modules:
     buildsystem: simple
     subdir: src
     build-commands:
-      - GYP_DEFINES="document_dir=/app/ime/mozc/licenses/mozc use_libzinnia=1 enable_gtk_renderer=0
-        use_fcitx5=YES use_fcitx=0" python build_mozc.py gyp --server_dir=/app/addons/Mozc/lib/mozc
-      - python build_mozc.py build -c Release server/server.gyp:mozc_server gui/gui.gyp:mozc_tool
-        unix/fcitx5/fcitx5.gyp:fcitx5-mozc
-      - _bldtype=Release PREFIX=${FLATPAK_DEST} ../scripts/install_server
-      - _bldtype=Release PREFIX=${FLATPAK_DEST} ../scripts/install_fcitx5
+      - bazel build --distdir=$PWD/../bazel-deps --config oss_linux --compilation_mode
+        opt --copt "-fPIC" --linkopt "${LDFLAGS}" unix/fcitx5:fcitx5-mozc.so server:mozc_server
+        gui/tool:mozc_tool && _bldtype=Release PREFIX=${FLATPAK_DEST} ../scripts/install_server_bazel
+        && _bldtype=Release PREFIX=${FLATPAK_DEST} ../scripts/install_fcitx5_bazel
     sources:
       - type: git
         url: https://github.com/fcitx/mozc
         disable-shallow-clone: true
-        commit: 835de48f0afbf16ee03f6576b091a5e019487df3
+        commit: 773c4c5760b6e8a52fdff5ae6ec09fb1bbc4bc47
+      - type: patch
+        path: zip-code.patch
       - type: shell
         commands:
-          - sed "/stdlib=libc++/d;/-lc++/d" -i src/gyp/common.gypi
+          - sed -e "s|LINUX_MOZC_DOCUMENT_DIR = \(.*\)|LINUX_MOZC_DOCUMENT_DIR = \"${document_dir}\"|"
+            -e "s|LINUX_MOZC_SERVER_DIR = \(.*\)|LINUX_MOZC_SERVER_DIR = \"${server_dir}\"|"
+            -e "s|LINUX_MOZC_ICONS_DIR = \(.*\)|LINUX_MOZC_ICONS_DIR = \"${icons_dir}\"|"
+            -i src/config.bzl
+      - mozc-deps.yaml
     post-install:
       - appstream-compose --basename=org.fcitx.Fcitx5.Addon.Mozc --prefix=${FLATPAK_DEST}
         --origin=flatpak org.fcitx.Fcitx5.Addon.Mozc
