Update org.fcitx.Fcitx5.Addon.Mozc to commit-a47ae1c27546bb27b7517184cbbd63e0b6b95138

--- a/org.fcitx.Fcitx5.Addon.Mozc.yaml
+++ b/org.fcitx.Fcitx5.Addon.Mozc.yaml
@@ -4,38 +4,45 @@ runtime: org.fcitx.Fcitx5
 runtime-version: stable
 sdk: org.kde.Sdk//6.6
 sdk-extensions:
-  - org.freedesktop.Sdk.Extension.llvm17
-  - org.freedesktop.Sdk.Extension.bazel
+  - org.freedesktop.Sdk.Extension.llvm18
 build-extension: true
 separate-locales: false
 build-options:
   prefix: /app/addons/Mozc
-  prepend-path: /usr/lib/sdk/llvm17/bin:/usr/lib/sdk/bazel/bin
+  prepend-path: /usr/lib/sdk/llvm18/bin:/app/addons/Mozc/bin
   prepend-pkg-config-path: /app/addons/Mozc/lib/pkgconfig
-  prepend-ld-library-path: /usr/lib/sdk/llvm17/lib
+  prepend-ld-library-path: /usr/lib/sdk/llvm18/lib
   env:
     - server_dir=/app/addons/Mozc/lib/mozc
     - document_dir=/app/ime/mozc/licenses/mozc
     - icons_dir=/app/share/icons/mozc
     - LOCALE=C.UTF-8
+    - CC=clang
+    - CXX=clang++
 cleanup:
   - /bin
   - /include
   - /lib/pkgconfig
   - '*.la'
 modules:
+  - modules/bazel.yaml
   - name: mozc
     buildsystem: simple
     subdir: src
     build-commands:
-      - ../scripts/build_fcitx5_bazel --distdir=$PWD/../bazel-deps --linkopt "${LDFLAGS}"
+      - ../scripts/build_fcitx5_bazel --config release_build --distdir=$PWD/../bazel-deps
+        --registry=file:///$PWD/../bcr $(echo "${LDFLAGS}"|xargs -n1 echo "--linkopt")
         && PREFIX=${FLATPAK_DEST} ../scripts/install_server_bazel && PREFIX=${FLATPAK_DEST}
         ../scripts/install_fcitx5_bazel
     sources:
       - type: git
         url: https://github.com/fcitx/mozc
         disable-shallow-clone: true
-        commit: e379550bcdfd5f54507a8ad3d95f20cb9e0385fb
+        commit: a47ae1c27546bb27b7517184cbbd63e0b6b95138
+      - type: git
+        url: https://github.com/bazelbuild/bazel-central-registry
+        dest: bcr
+        tag: 85523968142137ee5b691a1937efcdb1f7353082
       - type: patch
         path: zip-code.patch
       - type: shell
