Update org.fcitx.Fcitx5.Addon.Mozc to pr-commit-a47ae1c27546bb27b7517184cbbd63e0b6b95138
added cpython.yaml

--- a/org.fcitx.Fcitx5.Addon.Mozc.yaml
+++ b/org.fcitx.Fcitx5.Addon.Mozc.yaml
@@ -52,3 +52,4 @@ modules:
             -e "s|LINUX_MOZC_ICONS_DIR = \(.*\)|LINUX_MOZC_ICONS_DIR = \"${icons_dir}\"|"
             -i src/config.bzl
       - mozc-deps.yaml
+      - modules/cpython.yaml
